--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   google_maps_flutter: ^2.1.8
   provider: ^6.0.3
   flutter_spinkit: ^5.1.0
+  geolocator: ^8.0.1
+  location: ^4.2.0
 
 dev_dependencies:
   flutter_test:
